--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -33,7 +33,7 @@ cache = false
 
 [UI]
 # Name of the app and chatbot.
-name = "😺㏈ ⌗"
+name = "B2Data"
 
 # Description of the app and chatbot. This is used for HTML tags.
 description = "A demo of a BI chatbot"
@@ -45,7 +45,7 @@ default_expand_messages = false
 hide_cot = false
 
 # Link to your github repo. This will add a github button in the UI's header.
-github = "https://github.com/rmic/ChatDB"
+# github = "https://github.com/rmic/ChatDB"
 
 # Override default MUI light theme. (Check theme.ts)
 [UI.theme.light]
