--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -67,6 +67,9 @@ hide_cot = false
         #dark = "#980039"
         #light = "#FFE7EB"
 
+[features]
+prompt_playground = false
+multi_modal = false
 
 [meta]
 generated_by = "0.6.402"
